[package]
name = "kraken_payment"
version = "1.0.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.1", features = ["derive", "env"] }
config = "0.13.0"
env_logger = "0.9.0"
lazy_static = "1.3.0"
log = "0.4.14"
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"