[package]
name = "k-pay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.20.0", features= ["full"] }
env_logger = "0.9.0"
log = "0.4.14"